--- a/src/blocks/popup.css
+++ b/src/blocks/popup.css
@@ -66,7 +66,7 @@
 /* avatar */
 .popup__content_avatar {
   max-height: 272px;
-  height: auto;
+  height: 100%;
   margin: 224px auto;
 }
 
@@ -229,8 +229,10 @@
 /* submit-button */
 .popup__button {
   max-width: 358px;
+  max-height: 50px;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
   font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -363,7 +365,6 @@
   /* submit-button */
   .popup__button {
     max-width: 322.2px;
-    max-height: 45.13px;
     font-size: 16.2px;
     line-height: 19.8px;
     border-radius: 1.8px;
@@ -476,7 +477,6 @@
   /* submit button */
   .popup__button {
     max-width: 304.28px;
-    max-height: 42.62px;
     border-radius: 1.69px;
     font-size: 15.29px;
     line-height: 18.69px;
@@ -492,110 +492,6 @@
 
 /* -------------  1024  ------------- */
 @media screen and (max-width: 1024px) {
-  /* content */
-  .popup__content {
-    max-width: 343.95px;
-    max-height: 263.95px;
-    border-radius: 7.98px;
-  }
-
-  .popup__content_image {
-    max-width: 346.35px;
-    max-height: 431.93px;
-    margin: 71.98px auto;
-  }
-
-  .popup__content_avatar {
-    height: 217.56px;
-    margin: 179.17px auto;
-  }
-
-  .popup__content_confirm-delete {
-    height: 144.77px;
-    margin: 215.96px auto 215.16px;
-  }
-
-  /* caption */
-  .popup__caption {
-    max-width: 232.76px;
-    font-size: 9.58px;
-    line-height: 11.98px;
-    top: calc(100% + 7.98px);
-  }
-
-  /* close-icon */
-  .popup__close-button {
-    max-width: 31.98px;
-    max-height: 31.98px;
-    top: -31.47px;
-    right: -31.47px;
-  }
-
-  /* title */
-  .popup__title {
-    max-width: 263.95px;
-    font-size: 19.18px;
-    line-height: 23.18px;
-    margin: 27.18px auto 0 28.78px;
-  }
-
-  /* form */
-  .popup__form {
-    max-width: 286.35px;
-    margin: 43.18px auto 0;
-  }
-
-  .popup__form_type_confirm {
-    margin: 30.38px auto 28.78px;
-  }
-
-  /* input */
-  .popup__input {
-    width: 286.35px;
-    height: 21.65px;
-    font-size: 11.18px;
-    line-height: 13.58px;
-  }
-
-  .popup__input_type_name,
-  .popup__input_type_card-name,
-  .popup__input_type_avatar {
-    margin: 0;
-    padding: 0 0 10.59px;
-  }
-
-  .popup__input_type_activity,
-  .popup__input_type_url {
-    margin: 23.78px 0 0;
-    padding: 0 0 10.66px;
-  }
-
-  /* validation */
-  .popup__input_type_error {
-    border-bottom: 0.79px solid #ff0000;
-  }
-
-  .popup__input-error {
-    max-width: 286.35px;
-    height: 0.07px;
-    margin: 3.99px 0 0;
-  }
-
-  .popup__error_visible {
-    font-size: 9.58px;
-    line-height: 11.98px;
-  }
-
-  /* submit button */
-  .popup__button {
-    max-width: 286.35px;
-    max-height: 40.1px;
-    border-radius: 1.59px;
-    font-size: 14.38px;
-    line-height: 10.58px;
-    margin: 38.38px auto 0;
-  }
-
   .popup__button_confirm {
     width: 100%;
     height: 100%;
@@ -645,6 +541,11 @@
     width: 100%;
     height: 100%;
     margin: 0;
+  }
+
+  .popup__close-button {
+    top: -60px;
+    right: 2px;
   }
 }
 
